--- a/witam/index.html
+++ b/witam/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Witryna internetowa-Szymon Dolański gr A</title>
+    <title>Opinie klientów</title>
     <link rel="stylesheet" href="styl3.css">
 </head>
 <body>
